--- a/contract/package.json
+++ b/contract/package.json
@@ -15,5 +15,12 @@
     "hardhat": "^3.0.9",
     "mocha": "^11.7.4",
     "typescript": "~5.8.0"
+  },
+  "dependencies": {
+    "@layerzerolabs/lz-definitions": "^3.0.142",
+    "@layerzerolabs/lz-evm-oapp-v2": "^3.0.142",
+    "@layerzerolabs/toolbox-hardhat": "^0.6.12",
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.3"
   }
 }
