--- a/contract/package.json
+++ b/contract/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@layerzerolabs/lz-evm-oapp-v2": "^3.0.142",
     "@openzeppelin/contracts": "^5.4.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "hashscan-verify": "^0.2.0"
   }
 }
