--- a/slime-fe/package.json
+++ b/slime-fe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "futarchy-frontend",
+  "name": "slime-fe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,22 +9,23 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^2.1.0",
-    "clsx": "^2.1.1",
-    "ethers": "^6.13.0",
+    "@tanstack/react-query": "^5.90.5",
+    "dotenv": "^17.2.3",
+    "ethers": "^6.15.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.3.1",
-    "viem": "^2.21.0",
-    "wagmi": "^2.12.0"
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@wagmi/connectors": "^6.1.0",
+    "@wagmi/core": "^2.22.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
