--- a/slime-fe/package.json
+++ b/slime-fe/package.json
@@ -20,6 +20,7 @@
     "wagmi": "^2.18.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
